crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__all_of_trailing_false.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"allOf\":[{\"type\":\"string\"},false]}"
expression: is_valid_body(schema)
---
(instance.is_string()) && (false)
