crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__any_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"anyOf\":[{\"type\":\"string\"},{\"type\":\"number\"}]}"
expression: is_valid_body(schema)
---
(instance.is_string() || instance.is_number())
