crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__any_of_false_member.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"anyOf\":[false,{\"type\":\"string\"}]}"
expression: is_valid_body(schema)
---
(false || instance.is_string())
