crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__array_unique_and_contains.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"contains\":{\"type\":\"integer\"},\"type\":\"array\",\"uniqueItems\":true}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => {
                (__uniq::is_unique(arr))
                    && (arr
                        .iter()
                        .any(|instance| match instance {
                            __Value::Number(n) => __types::is_integer(n),
                            _ => false,
                        }))
            }
            _ => false,
        }
