crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__bench_helpers_validator.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"minimum\":0,\"type\":\"integer\"}"
expression: extract_is_valid_body(&code)
---
match instance {
            __Value::Number(n) if __types::is_integer(n) => __num::ge(n, 0u64),
            _ => false,
        }
