crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__boolean_false_root.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "false"
expression: is_valid_body(schema)
---
false
