crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__boolean_true_root.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "true"
expression: is_valid_body(schema)
---
true
