crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__collect_object_all_applicators.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":{\"type\":\"integer\"},\"patternProperties\":{\"^x\":{\"type\":\"integer\"}},\"properties\":{\"a\":{}},\"propertyNames\":{\"minLength\":1},\"type\":\"object\"}"
expression: collect_body(schema)
---
match instance {
            __Value::Object(obj) => {
                for key in obj.keys() {
                    let __key_val: __sj::Value = __sj::Value::String(key.clone());
                    let mut __key_errors: Vec<__VE<'_>> = Vec::new();
                    {
                        let s = key;
                        let instance = &__key_val;
                        let __errors = &mut __key_errors;
                        if !(!s.is_empty()) {
                            __errors
                                .push(
                                    __err::min_length(
                                        "/propertyNames/minLength",
                                        __path.into(),
                                        instance,
                                        1,
                                    ),
                                );
                        }
                    }
                    for __e in __key_errors {
                        __errors.push(__e.to_owned());
                    }
                }
                for (key, value) in obj.iter() {
                    let key_str = key.as_str();
                    let mut covered = false;
                    match key_str {
                        "a" => {
                            covered = true;
                        }
                        _ => {}
                    }
                    if key.as_str().starts_with("x") {
                        let instance = value;
                        let __path = &__path.push(key_str);
                        if !(match instance {
                            __Value::Number(n) => __types::is_integer(n),
                            _ => false,
                        }) {
                            __errors
                                .push(
                                    __err::single_type(
                                        "/patternProperties/^x/type",
                                        __path.into(),
                                        instance,
                                        __JT::Integer,
                                    ),
                                );
                        }
                        covered = true;
                    }
                    if !covered {
                        let instance = value;
                        let __path = &__path.push(key_str);
                        if !(match instance {
                            __Value::Number(n) => __types::is_integer(n),
                            _ => false,
                        }) {
                            __errors
                                .push(
                                    __err::single_type(
                                        "/additionalProperties/type",
                                        __path.into(),
                                        instance,
                                        __JT::Integer,
                                    ),
                                );
                        }
                    }
                }
            }
            _ => {
                __errors
                    .push(
                        __err::single_type(
                            "/type",
                            __path.into(),
                            instance,
                            __JT::Object,
                        ),
                    );
            }
        }
